# mctdh-cpp

./: .gitignore  CMakeLists.txt
Hamiltonians/: CMakeLists.txt  Hamiltonians.h
Hamiltonians/Operators/: CMakeLists.txt  Operators.h
Hamiltonians/Operators/CH3_meanfield/: CH3_meanfield.cpp  CH3_meanfield.h  CMakeLists.txt
Hamiltonians/Operators/CH3_quasiexact/: CH3_quasiexact.cpp  CH3_quasiexact.h  CH3_quasiexact.wrong.f  CMakeLists.txt  TrafoCH3Quasiexact.cpp  TrafoCH3Quasiexact.h
Hamiltonians/Operators/CoupledHO/: CoupledHO.cpp
Hamiltonians/Operators/Depricated_Operators/: hamiltonKvN.cpp
Hamiltonians/Operators/Depricated_Operators/ABC3/: ABC3_rst.cpp  ABC3_rst.f  ABC3_rst.h  CMakeLists.txt
Hamiltonians/Operators/Depricated_Operators/CDVRModel3/: CDVRModel3.cpp  CDVRModel3.h  CMakeLists.txt
Hamiltonians/Operators/Depricated_Operators/CH4_decoup/: CH4_decoup.cpp  CH4_decoup.f  CH4_decoup.h  CMakeLists.txt
Hamiltonians/Operators/Depricated_Operators/CH4_frozen/: CH4_dynamic_frozen.f  CH4_frozen.cpp  CH4_frozen.f  CH4_frozen.h  CMakeLists.txt
Hamiltonians/Operators/Depricated_Operators/CH4_radau/: CH4_radau_J0.cpp  CH4_radau_J0.h  CMakeLists.txt  operatoren.ch4.radau.f
Hamiltonians/Operators/Depricated_Operators/CH4_rst/: CH4_rst.cpp  CH4_rst.f  CH4_rst.h  CMakeLists.txt
Hamiltonians/Operators/Depricated_Operators/CH5+_radau_J0/: CH5+_radau_J0.cpp  CH5+_radau_J0.h  CMakeLists.txt  operatoren.ch5+.f
Hamiltonians/Operators/Depricated_Operators/CoupledDoubleWell/: CMakeLists.txt  CoupledDoubleWell.cpp  CoupledDoubleWell.h
Hamiltonians/Operators/Depricated_Operators/HCH4_rst/: CMakeLists.txt  HCH4_rst.cpp  HCH4_rst.f  HCH4_rst.h
Hamiltonians/Operators/Depricated_Operators/Hubbard/: CMakeLists.txt  hamiltonianHubbardSQR.cpp  hamiltonianHubbardSQR.h
Hamiltonians/Operators/Depricated_Operators/KvN/: CMakeLists.txt  hamiltonKvN.h
Hamiltonians/Operators/Depricated_Operators/NOCl_inflated/: NOCl.cpp  NOCl.h
Hamiltonians/Operators/Depricated_Operators/OHCH4/: CMakeLists.txt  OHCH4.cpp  OHCH4.f  OHCH4.h
Hamiltonians/Operators/Depricated_Operators/VibronicCoupling/: CMakeLists.txt  hamiltonianCnv.cpp  hamiltonianCnv.h
Hamiltonians/Operators/Depricated_Operators/eckhart/: CMakeLists.txt  eckhart.cpp  eckhart.f  eckhart.h
Hamiltonians/Operators/Depricated_Operators/mlSOP_model_1/: CMakeLists.txt  mlSOP_model_1.cpp  mlSOP_model_1.h
Hamiltonians/Operators/ElectronicStructure/: ElectronicStructure.cpp  ElectronicStructure.h  JordanWigner.cpp  JordanWigner.h
Hamiltonians/Operators/GenericKEO/: CMakeLists.txt  GenericKEO.cpp  GenericKEO.h
Hamiltonians/Operators/Molecules/: NOCl.cpp  NOCl.h  NormalModes.cpp  NormalModes.h
Hamiltonians/Operators/NDI/: NDIHamiltonian.cpp
Hamiltonians/Operators/NOCl/: NOCl.cpp
Hamiltonians/Operators/PhysicalSystems/: SpinBoson.cpp  SpinBoson.h
Hamiltonians/Operators/PortfolioOptimization/: PortfolioOptimization.cpp  PortfolioOptimization.h
Hamiltonians/Operators/schaepers/: schaepers.h
Hamiltonians/PESs/: CMakeLists.txt  PESs.h
Hamiltonians/PESs/CDVRModelV/: CDVRModelV.cpp  CDVRModelV.h
Hamiltonians/PESs/CH3_1/: CH3Potential.cpp  CH3Potential.h  CMakeLists.txt
Hamiltonians/PESs/NOCl/: NOClPotential.cpp  NOClPotential.h
Hamiltonians/PESs/liu_ch4cl/: liuch4cl.cpp  liuch4cl.h
Hamiltonians/PESs/liu_ch4cl/pipNN/: ch4cl-pipnn.f  nnparam.mod  potential.f
examples/: NOCl.ml.yaml  cdvr_sl.yaml  ch3.yaml  ch3_cdvrtree.yaml  ch3_ml.yaml  coupledHO.ml.yaml  coupledho.yaml  ho_sl.yaml  largetree.yaml  nocl.yaml  nocl2.yaml  nocl3.yaml  nocl_gs.yaml  pentacene.yaml  test_ExplicitEdgeWavefunction.yaml  tree.yaml
examples/exciton/: pentacene.out
examples/integrals/h2/6-31g/: h2.yaml
src/: CMakeLists.txt  main.cpp
src/Core/: CMFIntegrator.cpp  CMFIntegrator.h  Eigenstates.cpp  Eigenstates.h  FortranOperator.cpp  FortranOperator.h  FortranSOP.cpp  FortranSOP.h  Hamiltonian.h  HamiltonianRepresentation.cpp  HamiltonianRepresentation.h  IntegratorInterface.h  IntegratorVariables.h  LayerInterface.cpp  LayerInterface.h  QuadraticHolePartitions.cpp  QuadraticHolePartitions.h  QuadraticPartitions.cpp  QuadraticPartitions.h  QuadraticSOP.cpp  QuadraticSOP.h  SCF.cpp  SCF.h  Wavefunction.cpp  Wavefunction.h  nActiveMarker.cpp  tCMFIntegrator.cpp  tCMFIntegrator.h  tEigenstates.cpp  tEigenstates.h  tHamiltonianRepresentation.cpp  tHamiltonianRepresentation.h  tIntegratorInterface.h  tIntegratorVariables.h  tLayerInterface.cpp  tLayerInterface.h
src/DVR/: CDVR.cpp  CDVR.h  CDVREdgeTensor.cpp  CDVREdgeTensor.h  CDVRNodeTensor.cpp  CDVRNodeTensor.h  DeltaVTree.cpp  DeltaVTree.h  ExplicitEdgeWavefunction.cpp  ExplicitEdgeWavefunction.h  GridRepresentation.cpp  GridRepresentation.h  MatrixTensorTree.cpp  MatrixTensorTree.h  MatrixTensorTreeFunctions.cpp  MatrixTensorTreeFunctions.h  Potential.h  SymXMatrixTrees.cpp  SymXMatrixTrees.h  TDDVR.cpp  TDDVR.h  TreeGrids.h  XMatrixTrees.cpp  XMatrixTrees.h  cdvr_functions.cpp  cdvr_functions.h
src/Parser/: CMakeLists.txt  mctdh_job.cpp  mctdh_state.h  tmctdh_state.h  tyaml_parser.cpp  tyaml_parser.h  yaml_parser.cpp  yaml_parser.h
src/Utility/: NewtonRaphson.cpp  NewtonRaphson.h  Overlaps.cpp  Overlaps.h  normal_modes.cpp  normal_modes.h
tests/: CMakeLists.txt  test_CDVR.cpp  test_ExplicitEdgeWavefunction.cpp  test_Integrator.cpp  test_ML_Propagator.cpp  test_SCF.cpp  test_SL_Propagator.cpp  test_TDDVR.cpp  test_hrep.cpp  test_parser.cpp  test_representation.cpp  tests.cpp
tests/ml_tests/: SOPPot.yaml  nonSOPPot.yaml
tests/old/: test_CDVR.cpp
tests/parser_tests/: ml_read_write.yaml  sl_read_write.yaml
tests/representation_tests/: ML.yaml  SL.yaml
tests/sl_tests/: SOPPot.yaml  nonSOPPot.yaml
